@@ -3,30 +3,27 @@ module Ruport
   module Reportable
     
     def formatted_table(type,options={})
-      to_ds(:find => options[:find],:columns => options[:columns]).as(type){ |e|
+      to_table(:find => options[:find],:columns => options[:columns]).as(type){ |e|
         yield(e) if block_given?
       }
     end
     
-    def to_ds(options={})
-     options[:columns] ||= column_names
-     find(:all,options[:find]).
-       to_ds(column_names).select_columns(*options[:columns])
+    def to_table(options={})
+      options[:columns] ||= column_names
+       Ruport::Data::Table.new(
+        :data => find(:all,options[:find]), 
+        :column_names => column_names).reorder(*options[:columns])
     end
+
 
   end
 
-  class DataSet
-    
+  class Data::Table
     alias_method :old_append, :<<
-    def <<( stuff, filler=@default )
-      if stuff.kind_of?(ActiveRecord::Base)
-        @data << stuff.attributes
-      else
-        old_append(stuff,filler)
-      end
+    def <<( stuff )
+      stuff = stuff.attributes if stuff.kind_of? ActiveRecord::Base
+      old_append(stuff)
     end
-
   end
 end
 
